# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  parser.py  psql_db.py
page_analyzer/templates/: footer.html  header.html  index.html  main.html  messages.html
page_analyzer/templates/urls/: index.html  show.html
tests/: test_db.py  test_main.py
